{
    "name": "DebugPlayerSettingsInput",
    "maps": [
        {
            "name": "PlayerSettings",
            "id": "e6666501-7e40-4eeb-8467-c0dfb0dbc28d",
            "actions": [
                {
                    "name": "Rebind",
                    "type": "Button",
                    "id": "aa2dffeb-4b5f-4e84-83a8-1b45cde022fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectionUp",
                    "type": "Button",
                    "id": "a1dcb5db-0286-47cf-bd69-4904604dcfdc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectionDown",
                    "type": "Button",
                    "id": "44a2013d-076d-4fb1-966c-4957b8d04140",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Increment",
                    "type": "Button",
                    "id": "4b3eafe1-91dd-4af3-b0a5-8da22357ba92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Decrement",
                    "type": "Button",
                    "id": "3d985e0d-9fbe-4916-9fa9-e59f371cf1f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "IncrementLarge",
                    "type": "Button",
                    "id": "4e9e27c1-482e-475c-9006-bb596aa70401",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DecrementLarge",
                    "type": "Button",
                    "id": "2bb160fe-032b-4761-9a3d-e2302421459c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleDasInterruption",
                    "type": "Button",
                    "id": "1fff08e7-95c1-4b39-8427-3bcf688558e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SDGLow",
                    "type": "Button",
                    "id": "d3cb8d99-e8d8-4edb-89f1-03f5b9a11bbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SDGHigh",
                    "type": "Button",
                    "id": "b06aaa64-f442-4ea3-82de-f14c3f2f1fbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ReturnToDebugRoot",
                    "type": "Button",
                    "id": "93ce57de-786f-465b-b70d-cc87a301eb16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3af52e78-bcce-4ff0-be34-5fa21fdf3213",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Rebind",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45565299-edb1-4967-9cf7-625ff66da5a8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SelectionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a994722c-54ce-4211-be30-f589e5042d46",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SelectionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a767a5f8-1ec8-4d21-98a7-e01ca49c023a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Increment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09e205d5-0e08-437a-ba7c-9a49a63db25b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Decrement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a65e3e97-8d6d-45f2-b048-f7a3c93a0f06",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "IncrementLarge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f9f2b78-48f9-49f7-82b1-d06a4c719d61",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "DecrementLarge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aaf744b1-215b-44f8-9c52-210d1514fc09",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SDGLow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80c9e4b8-f8d9-4ff2-8ae4-bd6b585cfb1f",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SDGHigh",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb2d175f-9d23-4bf5-a68f-f8809ea5f0ba",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ReturnToDebugRoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d3729c9-8cb1-4920-905e-13fe9c65e0b6",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ToggleDasInterruption",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BindStorage",
            "id": "4e8f3ce4-a0f8-4712-8e6a-ac794a98e4c8",
            "actions": [
                {
                    "name": "Shift left",
                    "type": "Button",
                    "id": "ca76bd9e-4f37-453a-8519-c9d8fe7e66a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shift right",
                    "type": "Button",
                    "id": "6c968d42-01c0-4151-a7a2-afe2d5672fec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Soft drop",
                    "type": "Button",
                    "id": "832244f8-67a7-49ba-a721-b85c0684b401",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hard drop",
                    "type": "Button",
                    "id": "caf3967f-df58-45af-908d-72cf2d68bb2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate CW",
                    "type": "Button",
                    "id": "f8ead92a-853e-4913-8880-288688aa22b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate CCW",
                    "type": "Button",
                    "id": "d1541caa-724f-490e-9b88-084ec6568f93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate 180",
                    "type": "Button",
                    "id": "e1b7b651-bd18-438f-8291-f12e1ba83645",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "2c12810b-2e74-456d-95bd-7c2115deff44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "b4dcd536-ec34-4c87-8eea-c875d1f7e575",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "b4d725e0-297e-4873-bbca-c4b2b4f34fe8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7a342e8f-0a6d-4b25-b2b2-045fa6b68b73",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a56a5bd6-68da-4a46-9f74-38212f9075b6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4b5019d-e9fb-47f0-a79f-26b26ea2ce5f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Soft drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "420b33ae-0e1b-4809-97f6-ebd64a7cbe97",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hard drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f6761f5-6bb8-4931-bd65-2c54cb885b1d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate CW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f206cc98-2ddd-4800-9db7-8faf0de53120",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate CCW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6aac5404-1ec7-4c46-8a97-039ce8f0cebf",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate 180",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e59a73e0-f342-4482-b475-06a503a2a18a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a19a817-d052-47b0-a210-18213735231d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bea774a0-0743-483a-ac33-a8d605b81125",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Rebinding",
            "id": "e53d464b-3de7-4aa2-9ce7-e60baa8b8df7",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}